--- a/skyfolk/static/css/welcome.css
+++ b/skyfolk/static/css/welcome.css
@@ -14,8 +14,7 @@ html, body {
     background-color: #fff;
     height: 30%;
     color: #1e88e5;
-    border-bottom: 2px solid #1e88e5; }
-    .container > .title > h3 {
-      padding: 15px; }
+    border-bottom: 2px solid #1e88e5;
+    margin-top: 1.3em; }
 
 /*# sourceMappingURL=welcome.css.map */
