--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -9,325 +9,40 @@
 {% block content %}
     <div class="wrapper white z-depth-1">
         <div class="col s12 m12 l12 title">
-            <h3 class="center-align">Elige tus intereses</h3>
+            <h3 class="grey-text darken-1 center-align">Elige tus intereses</h3>
         </div>
-
+        <div class="row">
+            <div class="col s12">
+                <div class="chips chips-placeholder"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <p class="flow-text">Los usuarios han mostrado interés por... </p>
+                {% for theme in top_tags %}
+                    <div class="chip top-theme"> {{ theme.name }}</div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="divider"></div>
         <form id="submit-themes" action="" method="post">{% csrf_token %}
             <div class="row">
-                <div class="col s12">
-                    <div class="chips chips-placeholder"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                <p class="flow-text">Los usuarios han mostrado interés por... </p>
-                   {% for theme in top_tags %}
-                       <div class="chip top-theme"> {{ theme.name }}</div>
-                   {% endfor %}
-                </div>
-            </div>
-            <div class="divider"></div>
-            <div class="row">
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-							<span class="card-title grey-text darken-1">
-                                    <i class="fa fa-futbol-o"> </i> Deportes</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check1"/>
-                                <label for="check1">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-globe"></i> Mundo</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check2"/>
-                                <label for="check2">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-play"></i> Música</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check3"/>
-                                <label for="check3">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-flask"></i> Ciencia</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check4"/>
-                                <label for="check4">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-pencil"></i> Letras</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check5"/>
-                                <label for="check5">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-code"></i> Tecnología</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check6"/>
-                                <label for="check6">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
+                {% for choice in form.choices %}
+                    <div class="col s12 m12 l4">
+                        <div class="card white">
+                            <div class="card-content">
 							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-history"></i> Historia</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check7"/>
-                                <label for="check7">Red</label>
-                            </p>
+                                    class="fa fa-paint-brush"></i> {{ choice.choice_label }}</span>
+                            </div>
+                            <div class="card-action">
+                                <p>
+                                    {{ choice.tag }}
+                                    <label for="{{ choice.id_for_label }}"></label>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-cutlery"></i> Comida</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check8"/>
-                                <label for="check8">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i
-                                    class="fa fa-television"></i> Televisión</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check9"/>
-                                <label for="check9">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-car"></i> Motor</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check10"/>
-                                <label for="check10">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-commenting-o"></i> Conocer gente</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check11"/>
-                                <label for="check11">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-glass"></i> Fiestas</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check12"/>
-                                <label for="check12">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-star"></i> De moda</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check13"/>
-                                <label for="check13">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-gamepad"></i> Videojuegos</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check14"/>
-                                <label for="check14">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-camera"></i> Fotografía</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check15"/>
-                                <label for="check15">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-                            <span class="card-title grey-text darken-1"><i class="fa fa-film"></i> Cine</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check16"/>
-                                <label for="check16">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-paint-brush"></i> Arte</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check17"/>
-                                <label for="check17">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m12 l4">
-                    <div class="card white">
-                        <div class="card-content">
-							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-camera"></i> Fotografía</span>
-                            <p class="blue-text darken-1">I am a very simple card. I am good at containing small bits of
-                                information. I am convenient because I require little
-                                markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <p>
-                                <input type="checkbox" id="check18"/>
-                                <label for="check18">Red</label>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
             <div class="row">
                 <div class="col s12">
