--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -12,7 +12,17 @@
 	<script src="{{STATIC_URL}}js/materialize.js" type="text/javascript"></script>
 	<script src="{{STATIC_URL}}js/welcome.js"></script>
 	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
+    <script src="{{STATIC_URL}}dist/sweetalert.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="{{STATIC_URL}}themes/google/google.css" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <style>
+        .default-div {
+          background-color: #fff;
+          border-radius: 7px !important;
+          box-shadow: 0 2px 10px rgba(0,0,0,0.8) !important;
+        }
+    </style>
+    <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css" onload="if(media!='all')media='all'">
 </head>
 
 
@@ -46,6 +56,5 @@
 		</div>
 		{% endblock %}
 	</div>
-
 </body>
 </html>
