--- a/skyfolk/templates/account/reccomendation_after_login.html
+++ b/skyfolk/templates/account/reccomendation_after_login.html
@@ -28,7 +28,9 @@
                             {% endfor %}
                         </div>
                         <div class="card-action">
-                            <button class="btn waves-effect waves-light blue darken-1" type="submit" name="action">
+                            <button data-user-id="{{ user.id }}"
+                                    class="btn waves-effect waves-light blue darken-1 follow-user" title="Seguir"
+                                    type="submit">
                                 Seguir
                             </button>
                         </div>
@@ -37,9 +39,10 @@
             {% endfor %}
             <div class="row">
                 <div class="col s12">
-                    <div class="col l6 m5 s12 left">
+                    <div class="divider"></div><br>
+                    <div class="col s12 left">
                         <a href="{% url 'user_profile:profile' username=user_profile %}"
-                           class="waves-effect waves-light btn left blue darken-1">Omitir</a>
+                           class="waves-effect waves-light btn right blue darken-1">He acabado</a>
                     </div>
                 </div>
             </div>
