--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -46,6 +46,7 @@
             </div>
             <div class="row">
                 <div class="col s12">
+                    <div class="divider"></div><br>
                     <div class="col l6 m5 s12 right">
                         <button type="submit" class="waves-effect waves-light btn right blue darken-1">He acabado
                         </button>
